--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,19 +1,29 @@
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    display: block;
+
 }
 h1 {
     color: steelblue;
+    border-bottom: 1px solid steelblue;
+    padding: 15px;
+    margin-bottom: 15px;
 }
 img {
     width: 150px;
@@ -25,9 +35,7 @@ img {
 p {
     padding: 0px;
 }
-main{
-    max-width: 840px;
-}
+
 aside{
     position: relative;
     width: 20rem;
@@ -64,4 +72,25 @@ aside h2 {
     position: absolute;
     top: 40px;
     left:100px;
+}
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid{
+    display: grid;
+    align-items: center;
+}
+main{
+    grid-column: 2/3;
+    margin: 1rem;
+}
+aside{
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    align-self: stretch;
 }
