--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -23,10 +23,16 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--primary-color);
+    text-align: center;
 }
 header {
     padding: 20px;
     background-color: var(--secondary-color);
+    display: grid;
+    grid-template-columns: 200px 1fr 2fr;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
+	max-width: 1000px;
 }
 p {
     padding: 25px;
@@ -63,17 +69,32 @@ nav a:hover {
 .hero h1,
 .hero article {
     position: absolute;
-    top: 20%;
-    left: 50%;
+    top: 5%;
+    left: 0.5%;
 }
 .hero article {
-    top: 60%;
+    top: 30%;
     background-color: rgba(255, 255, 255, 0.7);
-    padding: 20px;
+    padding: 10px;
     width: 35%;
 }
 .hero article img {
     float: right;
 }
+.adventure {
+    display: grid;
+    grid-template-columns: repeat(4, 200px);
+    gap: 5px
+}
+.adventure img {
+    width: 100%;
+    height: auto;
+}
+.social.links {
+    display: flex;
+    justify-content: right
+}
+
+
 
 
